changes made to gitignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,50 @@
 {
     "cSpell.words": [
+        "minmax",
         "whatsapp"
+    ],
+    "cSpell.ignoreWords": [
+        "adipisci",
+        "adipisicing",
+        "aliquid",
+        "amet",
+        "animi",
+        "commodi",
+        "consectetur",
+        "corrupti",
+        "culpa",
+        "distinctio",
+        "dolor",
+        "elit",
+        "error",
+        "ex",
+        "illum",
+        "incidunt",
+        "ipsum",
+        "itaque",
+        "lorem",
+        "maxime",
+        "minus",
+        "molestiae",
+        "natus",
+        "necessitatibus",
+        "neque",
+        "nihil",
+        "nobis",
+        "non",
+        "omnis",
+        "pariatur",
+        "placeat",
+        "quas",
+        "quisquam",
+        "ratione",
+        "repellendus",
+        "sapiente",
+        "sit",
+        "soluta",
+        "sunt",
+        "temporibus",
+        "vel",
+        "voluptatibus"
     ]
 }
